--- a/webdev/dropwizard-angular-webapp/dw-server/angularjs-webapp/src/main/webapp/index.html
+++ b/webdev/dropwizard-angular-webapp/dw-server/angularjs-webapp/src/main/webapp/index.html
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <html>
     <head>
         <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
@@ -21,6 +22,7 @@
         <script type="text/javascript" src="js/angular.min.js"></script>
         <script type="text/javascript" src="js/angular-resource.js"></script>
         <script type="text/javascript" src="js/angular-route.js"></script>
+        <script type="text/javascript" src="js/ui-bootstrap-tpls-2.2.0.min.js"></script>
         <script src="js/menu.js"></script>
     </body>
 </html>
